# krustlet

./: .dockerignore  .gitignore  .markdownlinkcheck.json  .markdownlint.json  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  community_meeting.ics  deny.toml  flake.nix  justfile  justfile-windows  krustlet-wascc-e2e.stderr.txt  krustlet-wasi-e2e.stderr.txt
config/: certificate.pfx  host.cert  host.key
crates/krator/: Cargo.toml  README.md
crates/krator-derive/: Cargo.toml
crates/krator-derive/src/: admission.rs  lib.rs  transitions.rs
crates/krator-derive/tests/: admission.rs
crates/krator/examples/: README.md  moose.rs
crates/krator/examples/assets/: deploy.sh  generate_random_meese.py  invalid_moose.yaml  manfred.yaml  requirements.txt  start_jaeger.sh  use-external-endpoint.sh  webhook.yaml
crates/krator/examples/manifests/: melissa.yaml  moose.yaml
crates/krator/src/: admission.rs  context.rs  lib.rs  manager.rs  manifest.rs  object.rs  operator.rs  runtime.rs  state.rs  store.rs  util.rs
crates/krator/src/manager/: controller.rs  dynamic.rs  tasks.rs  watch.rs
crates/kubelet/: Cargo.toml  README.md  build.rs
crates/kubelet/proto/deviceplugin/v1/: deviceplugin.proto
crates/kubelet/proto/deviceplugin/v1beta1/: deviceplugin.proto
crates/kubelet/proto/pluginregistration/v1/: pluginregistration.proto
crates/kubelet/src/: TLS_BOOTSTRAP.md  bootstrapping.rs  config.rs  config_interpreter.rs  example-bootstrap-kubelet.conf  handle.rs  image_client.rs  kubeconfig.rs  kubelet.rs  lib.rs  logs.rs  module_store.rs  node.rs  operator.rs  pod.rs  provider.rs  queue.rs  reference.rs  server.rs  state.rs  status.rs  tls_bootstrapper.rs  volumes.rs
crates/kubelet/src/backoff/: mod.rs
crates/kubelet/src/bootstrapping/: mod.rs
crates/kubelet/src/container/: container.rs  handle.rs  mod.rs  state.rs  status.rs
crates/kubelet/src/device_plugin_manager/: endpoint.rs  manager.rs  mod.rs  node_patcher.rs  plugin_connection.rs  pod_devices.rs  resources.rs
crates/kubelet/src/fs_watch/: mod.rs
crates/kubelet/src/grpc_sock/: client.rs  mod.rs
crates/kubelet/src/grpc_sock/unix/: mod.rs
crates/kubelet/src/grpc_sock/windows/: mod.rs
crates/kubelet/src/handle/: mod.rs  stopper.rs
crates/kubelet/src/log/: mod.rs
crates/kubelet/src/mio_uds_windows/: .gitignore  Cargo.toml  README.md  listener.rs  mod.rs  poll.rs  stream.rs
crates/kubelet/src/mio_uds_windows/stdnet/: ext.rs  mod.rs  net.rs  socket.rs
crates/kubelet/src/mio_uds_windows/sys/: mod.rs
crates/kubelet/src/mio_uds_windows/sys/windows/: mod.rs  selector.rs  uds.rs
crates/kubelet/src/mio_uds_windows/test/: mod.rs  test_close_on_drop.rs  test_custom_evented.rs  test_double_register.rs  test_echo_server.rs  test_local_addr_ready.rs  test_oneshot.rs  test_register_deregister.rs  test_register_multiple_event_loops.rs  test_reregister_without_poll.rs  test_smoke.rs  test_uds.rs  test_uds_level.rs  test_write_then_drop.rs
crates/kubelet/src/node/: mod.rs
crates/kubelet/src/plugin_watcher/: mod.rs
crates/kubelet/src/pod/: handle.rs  manager.rs  mod.rs  pod.rs  queue.rs  state.rs  status.rs
crates/kubelet/src/provider/: mod.rs
crates/kubelet/src/resources/: mod.rs  quantity.rs
crates/kubelet/src/resources/device_plugin_manager/: manager.rs  mod.rs  node_patcher.rs  plugin_connection.rs  pod_devices.rs
crates/kubelet/src/resources/util/: mod.rs
crates/kubelet/src/secret/: mod.rs
crates/kubelet/src/state/: default.rs  macros.rs  prelude.rs
crates/kubelet/src/state/common/: allocated.rs  crash_loop_backoff.rs  error.rs  image_pull.rs  image_pull_backoff.rs  mod.rs  registered.rs  resources.rs  terminated.rs  volume_mount.rs
crates/kubelet/src/store/: mod.rs
crates/kubelet/src/store/composite/: mod.rs
crates/kubelet/src/store/fs/: mod.rs
crates/kubelet/src/store/oci/: client.rs  file.rs  mod.rs
crates/kubelet/src/volume/: configmap.rs  downward.rs  hostpath.rs  mod.rs  persistentvolumeclaim.rs  projected.rs  secret.rs
crates/kubelet/src/webserver/: mod.rs
crates/oci-distribution/: Cargo.toml  README.md
crates/oci-distribution/src/: client.rs  errors.rs  lib.rs  manifest.rs  reference.rs  regexp.rs  secrets.rs  token_cache.rs
crates/wascc-logging/: Cargo.toml
crates/wascc-logging/src/: lib.rs
crates/wascc-provider/: Cargo.toml
crates/wascc-provider/lib/: libwascc_logging.dylib
crates/wascc-provider/src/: lib.rs  states.rs  wascc_runtime.rs
crates/wascc-provider/src/states/: cleanup.rs  container.rs  crash_loop_backoff.rs  error.rs  finished.rs  image_pull.rs  image_pull_backoff.rs  pod.rs  registered.rs  running.rs  starting.rs  terminated.rs  volume_mount.rs
crates/wascc-provider/src/states/container/: running.rs  starting.rs  terminated.rs  waiting.rs
crates/wascc-provider/src/states/pod/: crash_loop_backoff.rs  error.rs  image_pull.rs  image_pull_backoff.rs  registered.rs  running.rs  starting.rs  terminated.rs  volume_mount.rs
crates/wascc-provider/testdata/: echo.wasm  echo_actor_s.wasm  greet_actor_signed.wasm
crates/wasi-provider/: Cargo.toml
crates/wasi-provider/src/: handle.rs  lib.rs  states.rs  wasi_runtime.rs
crates/wasi-provider/src/states/: completed.rs  container.rs  crash_loop_backoff.rs  error.rs  finished.rs  image_pull.rs  image_pull_backoff.rs  initializing.rs  pod.rs  registered.rs  running.rs  starting.rs  terminated.rs  volume_mount.rs
crates/wasi-provider/src/states/container/: running.rs  terminated.rs  waiting.rs
crates/wasi-provider/src/states/pod/: completed.rs  crash_loop_backoff.rs  error.rs  image_pull.rs  image_pull_backoff.rs  initializing.rs  registered.rs  running.rs  starting.rs  terminated.rs  volume_mount.rs  wont_run.rs
crates/wasi-provider/testdata/: hello-world.wasm
crates/wasm3-provider/: Cargo.toml
crates/wasm3-provider/src/: lib.rs  runtime.rs
demos/wascc/uppercase/: Cargo.toml  Makefile  README.md  justfile  uppercase-wascc.yaml
demos/wascc/uppercase/src/: lib.rs
docs/: README.md
examples/: greet-oci.yaml  greet-wascc.yaml  greet-wasi.yaml  greet.yaml  (+1 more)
(+185 files in other folders)
