[package]
name = "krustlet"
version = "0.7.0"
authors = [
    "Matt Butcher <matt.butcher@microsoft.com>",
    "Matthew Fisher <matt.fisher@microsoft.com>",
    "Radu Matei <radu.matei@microsoft.com>",
    "Taylor Thomas <taylor.thomas@microsoft.com>",
    "Brian Ketelsen <Brian.Ketelsen@microsoft.com>",
    "Brian Hardock <Brian.Hardock@microsoft.com>",
    "Ryan Levick <rylevick@microsoft.com>",
    "Kevin Flansburg <kevin.flansburg@gmail.com>",
]
edition = "2018"
default-run = "krustlet-wasi"
license-file = "LICENSE"
description = "A Kubernetes kubelet implementation in Rust, used for running WebAssembly modules in Kubernetes"
repository = "https://github.com/deislabs/krustlet"
documentation = "https://github.com/deislabs/krustlet/tree/master/docs"
readme = "README.md"
keywords = [
    "wasm",
    "wasi",
    "webassembly",
    "kubernetes",
]
exclude = [
    "docs/*",
    "demos/*",
    ".github/*",
    ".gitignore"
]

[badges]
maintenance = { status = "actively-developed" }

[features]
default = ["native-tls"]
native-tls = [
    "kube/native-tls",
    "kube-runtime/native-tls",
    "krator/kube-native-tls",
    "kubelet/kube-native-tls",
    "wasi-provider/native-tls",
    "oci-distribution/native-tls"
]
rustls-tls = [
    "kube/rustls-tls",
    "kube-runtime/rustls-tls",
    "krator/rustls-tls",
    "kubelet/rustls-tls",
    "wasi-provider/rustls-tls",
    "oci-distribution/rustls-tls"
]

[dependencies]
anyhow = "1.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "time"] }
kube = { version= "0.52", default-features = false }
k8s-openapi = { version = "0.11", default-features = false, features = ["v1_20"] }
futures = "0.3"
krator = { path = "./crates/krator", version = "0.2", default-features = false }
kubelet = { path = "./crates/kubelet", version = "0.7", default-features = false, features = ["cli"] }
wasi-provider = { path = "./crates/wasi-provider", version = "0.7", default-features = false }
oci-distribution = { path = "./crates/oci-distribution", version = "0.6", default-features = false }
dirs = "3.0"
hostname = "0.3"
regex = "1.3"
env_logger = "0.7"

[dev-dependencies]
serde_derive = "1.0"
serde_json = "1.0"
serde = "1.0"
reqwest = { version = "0.11", default-features = false }
tempfile = "3.1"
kube-runtime = { version= "0.52", default-features = false }
compiletest_rs = "0.5"

[workspace]
members = [
    "crates/krator",
    "crates/kubelet",
    "crates/oci-distribution",
    "crates/wasi-provider",
    "crates/krator-derive"
]

[[bin]]
name = "krustlet-wasi"
path = "src/krustlet-wasi.rs"

[[bin]]
name = "oneclick"
path = "tests/oneclick/src/main.rs"

[[bin]]
name = "podsmiter"
path = "tests/podsmiter/src/main.rs"
