[package]
authors = [
  "Matt Butcher <matt.butcher@microsoft.com>",
  "Matthew Fisher <matt.fisher@microsoft.com>",
  "Radu Matei <radu.matei@microsoft.com>",
  "Taylor Thomas <taylor.thomas@microsoft.com>",
  "Brian Ketelsen <Brian.Ketelsen@microsoft.com>",
  "Brian Hardock <Brian.Hardock@microsoft.com>",
  "Ryan Levick <rylevick@microsoft.com>",
  "Kevin Flansburg <kevin.flansburg@gmail.com>",
]
default-run = "krustlet-wasi"
description = "A Kubernetes kubelet implementation in Rust, used for running WebAssembly modules in Kubernetes"
documentation = "https://github.com/deislabs/krustlet/tree/master/docs"
edition = "2018"
exclude = ["docs/*", "demos/*", ".github/*", ".gitignore"]
keywords = ["wasm", "wasi", "webassembly", "kubernetes"]
license = "Apache-2.0"
name = "krustlet"
readme = "README.md"
repository = "https://github.com/deislabs/krustlet"
version = "1.0.0-alpha.1"

[badges]
maintenance = {status = "actively-developed"}

[features]
default = ["native-tls"]
native-tls = [
  "kube/native-tls",
  "krator/kube-native-tls",
  "kubelet/kube-native-tls",
  "wasi-provider/native-tls",
  "oci-distribution/native-tls",
]
rustls-tls = [
  "kube/rustls-tls",
  "krator/rustls-tls",
  "kubelet/rustls-tls",
  "wasi-provider/rustls-tls",
  "oci-distribution/rustls-tls",
]

[dependencies]
anyhow = "1.0"
dirs = {package = "dirs-next", version = "2.0.0"}
futures = "0.3"
hostname = "0.3"
k8s-openapi = {version = "0.12", default-features = false, features = ["v1_21"]}
krator = {version = "0.4", default-features = false}
kube = {version = "0.58", default-features = false}
kubelet = {path = "./crates/kubelet", version = "1.0.0-alpha.1", default-features = false, features = ["cli"]}
oci-distribution = {path = "./crates/oci-distribution", version = "0.7", default-features = false}
regex = "1.3"
serde = "1.0"
tokio = {version = "1.0", features = ["macros", "rt-multi-thread", "time"]}
tracing-subscriber = "0.2"
wasi-provider = {path = "./crates/wasi-provider", version = "1.0.0-alpha.1", default-features = false}

[dev-dependencies]
async-trait = "0.1"
compiletest_rs = "0.6"
k8s-csi = "0.3"
kube-runtime = {version = "0.58", default-features = false}
reqwest = {version = "0.11", default-features = false}
serde_derive = "1.0"
serde_json = "1.0"
tempfile = "3.2"
tokio = {version = "1.0", features = ["macros", "rt-multi-thread", "time", "process"]}
tonic = "0.4"

[workspace]
members = [
  "crates/kubelet",
  "crates/oci-distribution",
  "crates/wasi-provider",
]

[[bin]]
name = "krustlet-wasi"
path = "src/krustlet-wasi.rs"

[[bin]]
name = "oneclick"
path = "tests/oneclick/src/main.rs"

[[bin]]
name = "podsmiter"
path = "tests/podsmiter/src/main.rs"
