[package]
name = "krator-derive"
version = "0.1.0"
authors = [
    "Matt Butcher <matt.butcher@microsoft.com>",
    "Matthew Fisher <matt.fisher@microsoft.com>",
    "Radu Matei <radu.matei@microsoft.com>",
    "Taylor Thomas <taylor.thomas@microsoft.com>",
    "Brian Ketelsen <Brian.Ketelsen@microsoft.com>",
    "Brian Hardock <Brian.Hardock@microsoft.com>",
    "Ryan Levick <rylevick@microsoft.com>",
    "Kevin Flansburg <kevin.flansburg@gmail.com>",
]
edition = "2018"
license-file = "../../LICENSE"
description = "Derive macros for the Krator crate"
repository = "https://github.com/deislabs/krustlet"
readme = "README.md"
keywords = ["wasm", "wasi", "webassembly", "kubernetes"]

[lib]
proc-macro = true
[dependencies]
syn = "1.0"
quote = "1.0"

anyhow = { version = "1.0.40", optional = true }
k8s-openapi = { version = "0.11", default-features = false, features = ["v1_20"], optional = true }
kube = { version = "0.52", default-features = false, features = ["derive"], optional = true }
proc-macro2 = "1.0.24"
rcgen = { version = "0.8.9", features = ["x509-parser", "pem"], optional = true }
schemars = { version = "0.8.0", optional = true }
serde_json = { version = "1.0", optional = true }
serde_yaml = { version = "0.8", optional = true }

[features]
default = ["kube/native-tls"]
admission-webhook = ["kube", "k8s-openapi", "rcgen", "anyhow"]

[package.metadata.docs.rs]
features = ["docs"]
rustdoc-args = ["--cfg", "feature=\"docs\""]

[dev-dependencies]
kube = { version = "0.52", default-features = false, features = ["derive"] }
kube-runtime = { version = "0.52", default-features = false }
kube-derive = "0.52"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
schemars = "0.8.0"
krator = { default-features = false, features = ["admission-webhook"], path = "../krator" }
