[package]
name = "krator"
version = "0.1.0"
authors = [
    "Matt Butcher <matt.butcher@microsoft.com>",
    "Matthew Fisher <matt.fisher@microsoft.com>",
    "Radu Matei <radu.matei@microsoft.com>",
    "Taylor Thomas <taylor.thomas@microsoft.com>",
    "Brian Ketelsen <Brian.Ketelsen@microsoft.com>",
    "Brian Hardock <Brian.Hardock@microsoft.com>",
    "Ryan Levick <rylevick@microsoft.com>",
    "Kevin Flansburg <kevin.flansburg@gmail.com>",
]
edition = "2018"
license-file = "../../LICENSE"
description = "A Kubernetes operator implementation in Rust"
repository = "https://github.com/deislabs/krustlet"
readme = "README.md"
keywords = [
    "state_machine",
    "operator",
    "kubernetes",
]

[badges]
maintenance = { status = "actively-developed" }

[features]
default = ["kube-native-tls"]
kube-native-tls = ["kube/native-tls", "kube-runtime/native-tls"]
rustls-tls = ["kube/rustls-tls", "kube-runtime/rustls-tls"]

[dependencies]
async-trait = "0.1"
anyhow = "1.0"
tokio  = { version = "0.2", features = ["fs", "stream", "macros", "signal"] }
k8s-openapi = { version = "0.9", default-features = false, features = ["v1_18"] }
kube = { version = "0.42", default-features = false }
kube-runtime = { version= "0.42", default-features = false }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = { version = "0.3", default-features = false }

[dev-dependencies]
kube-derive = "0.42"
chrono = "0.4"
env_logger = "0.8"
rand = "0.8"
