[package]
name = "krator"
version = "0.2.0"
authors = [
    "Matt Butcher <matt.butcher@microsoft.com>",
    "Matthew Fisher <matt.fisher@microsoft.com>",
    "Radu Matei <radu.matei@microsoft.com>",
    "Taylor Thomas <taylor.thomas@microsoft.com>",
    "Brian Ketelsen <Brian.Ketelsen@microsoft.com>",
    "Brian Hardock <Brian.Hardock@microsoft.com>",
    "Ryan Levick <rylevick@microsoft.com>",
    "Kevin Flansburg <kevin.flansburg@gmail.com>",
]
edition = "2018"
license-file = "../../LICENSE"
description = "A Kubernetes operator implementation in Rust"
repository = "https://github.com/deislabs/krustlet"
readme = "README.md"
keywords = [
    "state_machine",
    "operator",
    "kubernetes",
]

[badges]
maintenance = { status = "actively-developed" }

[features]
default = ["kube-native-tls"]
kube-native-tls = ["kube/native-tls", "kube-runtime/native-tls"]
rustls-tls = ["kube/rustls-tls", "kube-runtime/rustls-tls"]
derive = ["krator-derive"]
admission-webhook = ["warp", "json-patch"]

[dependencies]
async-trait = "0.1"
anyhow = "1.0"
tokio  = { version = "1.0", features = ["fs", "macros", "signal"] }
tokio-stream = { version = "0.1", features = ['sync'] }
k8s-openapi = { version = "0.11", default-features = false, features = ["v1_18"] }
kube = { version = "0.51", default-features = false }
kube-runtime = { version= "0.51", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = { version = "0.3", default-features = false }
krator-derive = { version = "0.1", path = "../krator-derive", optional = true }
warp = { version = "0.3", optional = true, features = ["tls"] }
json-patch = { version = "0.2", optional = true }
tracing = { version = "0.1", features = ['log'] }
tracing-futures = "0.2"

[dev-dependencies]
kube-derive = "0.51"
schemars = "0.8"
serde_yaml = "0.8"
chrono = "0.4"
rand = "0.8"
tracing-subscriber = "0.2"
tokio  = { version = "1.0", features = ["fs", "macros", "signal", "rt-multi-thread"] }
opentelemetry-jaeger = "0.11"
tracing-opentelemetry = "0.11"
structopt="0.3"

[[example]]
name = "moose"
required-features = ["derive"]
