[package]
name = "kubelet"
version = "0.5.0"
authors = [
    "Matt Butcher <matt.butcher@microsoft.com>",
    "Matthew Fisher <matt.fisher@microsoft.com>",
    "Radu Matei <radu.matei@microsoft.com>",
    "Taylor Thomas <taylor.thomas@microsoft.com>",
    "Brian Ketelsen <Brian.Ketelsen@microsoft.com>",
    "Brian Hardock <Brian.Hardock@microsoft.com>",
    "Ryan Levick <rylevick@microsoft.com>",
    "Kevin Flansburg <kevin.flansburg@gmail.com>",
]
edition = "2018"
license-file = "../../LICENSE"
description = "A Kubernetes kubelet implementation in Rust"
repository = "https://github.com/deislabs/krustlet"
readme = "README.md"
keywords = [
    "wasm",
    "wasi",
    "webassembly",
    "kubernetes",
]

[badges]
maintenance = { status = "actively-developed" }

[features]
default = ["kube-native-tls"]
kube-native-tls = ["kube/native-tls", "kube-runtime/native-tls", "oci-distribution/native-tls", "reqwest/native-tls"]
rustls-tls = ["kube/rustls-tls", "kube-runtime/rustls-tls","oci-distribution/rustls-tls", "reqwest/rustls-tls"]
cli = ["structopt"]
docs = ["cli", "derive"]
derive = ["kubelet-derive"]

[dependencies]
async-trait = "0.1"
base64 = "0.12"
dirs = "3.0"
anyhow = "1.0"
futures = { version = "0.3", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
hyper = { version = "0.13", default-features = false, features = ["stream"] }
log = "0.4"
reqwest = { version = "0.10", default-features = false, features = ["json", "stream"]}
tokio  = { version = "0.2", features = ["fs", "stream", "macros", "signal"] }
kube = { version = "0.42", default-features = false }
kube-runtime = { version= "0.42", default-features = false }
k8s-openapi = { version = "0.9", default-features = false, features = ["v1_18"] }
chrono = { version = "0.4", features = ["serde"] }
structopt = { version = "0.3", features = ["wrap_help"], optional = true }
hostname = "0.3"
thiserror = "1.0"
lazy_static = "1.4"
oci-distribution = { path = "../oci-distribution", version = "0.4", default-features = false }
url = "2.1"
warp = { version = "0.2", features = ['tls'] }
http = "0.2"
rcgen = "0.8"
uuid = { version = "0.8.1", features = ["v4"] }
kubelet-derive = { version = "0.1", path = "../kubelet-derive", optional = true }
json-patch = "0.2"
tonic = "0.3"
# prost is needed for the files built by the protobuf
prost = "0.6"
prost-types = "0.6"
notify = "5.0.0-pre.3"
async-stream = "0.3"
tower = "0.3"

[target.'cfg(target_family = "windows")'.dependencies]
mio = "0.6"
iovec = "0.1.2"
lazycell = "1"
kernel32-sys = "0.2.2"
miow = "0.2.1"
winapi = "0.2.8"
ws2_32-sys = "0.2.1"

[target.'cfg(target_family = "windows")'.dev-dependencies]
bytes = "0.3"
env_logger = { version = "0.4", default-features = false }
slab = "0.4"
tempdir = "0.3"
version-sync = "0.5"

[dev-dependencies]
reqwest = { version = "0.10", default-features = false }
tempfile = "3.1"

[build-dependencies]
tonic-build = "0.3"

[package.metadata.docs.rs]
features = ["docs"]
rustdoc-args = ["--cfg", "feature=\"docs\""]
