[package]
name = "oci-distribution"
version = "0.2.0"
authors = [
    "Matt Butcher <matt.butcher@microsoft.com>",
    "Matthew Fisher <matt.fisher@microsoft.com>",
    "Radu Matei <radu.matei@microsoft.com>",
    "Taylor Thomas <taylor.thomas@microsoft.com>",
    "Brian Ketelsen <Brian.Ketelsen@microsoft.com>",
    "Brian Hardock <Brian.Hardock@microsoft.com>",
    "Ryan Levick <rylevick@microsoft.com>",
]
edition = "2018"
license-file = "../../LICENSE"
description = "An OCI implementation in Rust"
repository = "https://github.com/deislabs/krustlet"
readme = "README.md"
keywords = [
    "oci",
    "containers",
]

[badges]
maintenance = { status = "actively-developed" }

[features]
default = ["native-tls"]
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]

[dependencies]
reqwest = { version = "0.10", default-features = false, features = ["json", "stream"] }
anyhow = "1.0"
tokio = { version  = "0.2", features = ["macros", "fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
www-authenticate = "0.3"
hyperx = "0.13"
futures-util = "0.3"
log = "0.4"
