[package]
name = "oci-distribution"
version = "0.5.0"
authors = [
    "Matt Butcher <matt.butcher@microsoft.com>",
    "Matthew Fisher <matt.fisher@microsoft.com>",
    "Radu Matei <radu.matei@microsoft.com>",
    "Taylor Thomas <taylor.thomas@microsoft.com>",
    "Brian Ketelsen <Brian.Ketelsen@microsoft.com>",
    "Brian Hardock <Brian.Hardock@microsoft.com>",
    "Ryan Levick <rylevick@microsoft.com>",
    "Kevin Flansburg <kevin.flansburg@gmail.com>",
]
edition = "2018"
license-file = "../../LICENSE"
description = "An OCI implementation in Rust"
repository = "https://github.com/deislabs/krustlet"
readme = "README.md"
keywords = [
    "oci",
    "containers",
]

[badges]
maintenance = { status = "actively-developed" }

[features]
default = ["native-tls"]
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]

[dependencies]
anyhow = "1.0"
futures-util = "0.3"
hyperx = "0.13"
lazy_static = "1.4"
log = "0.4"
regex = "1.3"
reqwest = { version = "0.11", default-features = false, features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.9.2"
tokio = { version  = "1.0", features = ["macros", "fs"] }
www-authenticate = "0.3"

[dev-dependencies]
rstest = "0.6"
