[package]
authors = [
  "Matt Butcher <matt.butcher@microsoft.com>",
  "Matthew Fisher <matt.fisher@microsoft.com>",
  "Radu Matei <radu.matei@microsoft.com>",
  "Taylor Thomas <taylor.thomas@microsoft.com>",
  "Brian Ketelsen <Brian.Ketelsen@microsoft.com>",
  "Brian Hardock <Brian.Hardock@microsoft.com>",
  "Ryan Levick <rylevick@microsoft.com>",
  "Kevin Flansburg <kevin.flansburg@gmail.com>",
]
description = "An OCI implementation in Rust"
edition = "2018"
keywords = [
  "oci",
  "containers",
]
license = "Apache-2.0"
name = "oci-distribution"
readme = "README.md"
repository = "https://github.com/deislabs/krustlet"
version = "0.7.0"

[badges]
maintenance = {status = "actively-developed"}

[features]
default = ["native-tls"]
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]

[dependencies]
anyhow = "1.0"
futures-util = "0.3"
hyperx = "0.13"
lazy_static = "1.4"
regex = "1.3"
reqwest = {version = "0.11", default-features = false, features = ["json", "stream"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
sha2 = "0.9.2"
tokio = {version = "1.0", features = ["macros", "fs"]}
tracing = {version = "0.1", features = ['log']}
www-authenticate = "0.3"
jwt = "0.15"

[dev-dependencies]
rstest = "0.11"
hmac = "0.11"
