[package]
name = "wascc-logging"
version = "0.1.0"
authors = [
    "Matt Butcher <matt.butcher@microsoft.com>",
    "Matthew Fisher <matt.fisher@microsoft.com>",
    "Radu Matei <radu.matei@microsoft.com>",
    "Taylor Thomas <taylor.thomas@microsoft.com>",
    "Brian Ketelsen <Brian.Ketelsen@microsoft.com>",
    "Brian Hardock <Brian.Hardock@microsoft.com>",
    "Ryan Levick <rylevick@microsoft.com>",
]
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
static_plugin = [] # Enable to statically compile this into a host

[dependencies]
wascc-codec = "0.7"
log = "0.4"
simplelog = "0.7"
tempfile = "3.1"
