[package]
name = "wascc-provider"
version = "0.1.0"
authors = [
    "Matt Butcher <matt.butcher@microsoft.com>",
    "Matthew Fisher <matt.fisher@microsoft.com>",
    "Radu Matei <radu.matei@microsoft.com>",
    "Taylor Thomas <taylor.thomas@microsoft.com>",
    "Brian Ketelsen <Brian.Ketelsen@microsoft.com>",
    "Brian Hardock <Brian.Hardock@microsoft.com>",
    "Ryan Levick <rylevick@microsoft.com>",
]
edition = "2018"

[dependencies]
anyhow = "1.0"
async-trait = "0.1.24"
wascc-host = "0.5.3"
log = "0.4"
serde = "1.0"
serde_derive = "1.0"
kube =  "0.29.0" 
kubelet = { path = "../kubelet", version = "0.1.0" }
tokio = { version = "0.2.11", features = ["fs", "macros"] }
chrono = { version = "0.4", features = ["serde"] }
wascc-logging = { path = "../wascc-logging", version = "0.1.0" }

[dev-dependencies]
k8s-openapi = { version = "0.7.1", features = ["v1_17"] }
oci-distribution = { path = "../oci-distribution", version = "0.1.0" }

