[package]
name = "wascc-provider"
version = "0.1.0"
authors = [
    "Matt Butcher <matt.butcher@microsoft.com>",
    "Matthew Fisher <matt.fisher@microsoft.com>",
    "Radu Matei <radu.matei@microsoft.com>",
    "Taylor Thomas <taylor.thomas@microsoft.com>",
    "Brian Ketelsen <Brian.Ketelsen@microsoft.com>",
    "Brian Hardock <Brian.Hardock@microsoft.com>",
    "Ryan Levick <rylevick@microsoft.com>",
]
edition = "2018"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
wascc-host = "0.6"
log = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
kube = "0.33" 
kubelet = { path = "../kubelet", version = "0.1.0" }
tokio = { version = "0.2", features = ["fs", "macros"] }
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3.1"
wascc-logging = { path = "../wascc-logging", version = "0.1", features = ["static_plugin"] }
wascc-httpsrv = { version = "0.6", features = ["static_plugin" ] }
k8s-openapi = { version = "0.7", features = ["v1_17"] }

[dev-dependencies]
oci-distribution = { path = "../oci-distribution", version = "0.1" }