[package]
name = "wascc-provider"
version = "0.6.0"
authors = [
    "Matt Butcher <matt.butcher@microsoft.com>",
    "Matthew Fisher <matt.fisher@microsoft.com>",
    "Radu Matei <radu.matei@microsoft.com>",
    "Taylor Thomas <taylor.thomas@microsoft.com>",
    "Brian Ketelsen <Brian.Ketelsen@microsoft.com>",
    "Brian Hardock <Brian.Hardock@microsoft.com>",
    "Ryan Levick <rylevick@microsoft.com>",
    "Kevin Flansburg <kevin.flansburg@gmail.com>",
]
edition = "2018"
publish = false

[features]
default = ["native-tls"]
native-tls = ["kube/native-tls", "kubelet/kube-native-tls", "krator/kube-native-tls"]
rustls-tls = ["kube/rustls-tls", "kubelet/rustls-tls", "krator/rustls-tls"]

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
wascc-host = "0.13"
log = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
kube = { version= "0.42", default-features = false }
kubelet = { path = "../kubelet", version = "0.6", default-features = false, features = ["derive"] }
krator = { path = "../krator", version = "0.1", default-features = false, features = ["derive"] }
tokio = { version = "0.2", features = ["fs", "macros"] }
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3.1"
wascc-codec = "0.8"
wascc-fs = { version = "0.1", features = ["static_plugin"] }
wascc-logging = { path = "../wascc-logging", version = "0.1", features = ["static_plugin"] }
wascc-httpsrv = { version = "0.8", features = ["static_plugin"] }
k8s-openapi = { version = "0.9", default-features = false, features = ["v1_18"] }
rand = "0.7.3"

[dev-dependencies]
oci-distribution = { path = "../oci-distribution", version = "0.5" }
