[package]
name = "wasi-provider"
version = "0.7.0"
authors = [
    "Matt Butcher <matt.butcher@microsoft.com>",
    "Matthew Fisher <matt.fisher@microsoft.com>",
    "Radu Matei <radu.matei@microsoft.com>",
    "Taylor Thomas <taylor.thomas@microsoft.com>",
    "Brian Ketelsen <Brian.Ketelsen@microsoft.com>",
    "Brian Hardock <Brian.Hardock@microsoft.com>",
    "Ryan Levick <rylevick@microsoft.com>",
    "Kevin Flansburg <kevin.flansburg@gmail.com>",
]
edition = "2018"
publish = false

[features]
default = ["native-tls"]
native-tls = ["kube/native-tls", "kubelet/kube-native-tls", "krator/kube-native-tls"]
rustls-tls = ["kube/rustls-tls", "kubelet/rustls-tls", "krator/rustls-tls"]

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
backtrace = "0.3"
kube = { version = "0.52", default-features = false }
wasmtime = "0.24"
wasmtime-wasi = "0.24"
wasi-common = "0.24"
wasi-cap-std-sync = "0.24"
cap-std = "0.13"
tempfile = "3.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
kubelet = { path = "../kubelet", version = "0.7", default-features = false, features = ["derive"] }
krator = { path = "../krator", version = "0.2", default-features = false, features = ["derive"] }
wat = "1.0"
tokio = { version = "1.0", features = ["fs", "macros", "io-util", "sync"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
tracing = { version = "0.1", features = ['log'] }

[dev-dependencies]
oci-distribution = { path = "../oci-distribution", version = "0.6" }
