[package]
authors = [
  "Matt Butcher <matt.butcher@microsoft.com>",
  "Matthew Fisher <matt.fisher@microsoft.com>",
  "Radu Matei <radu.matei@microsoft.com>",
  "Taylor Thomas <taylor.thomas@microsoft.com>",
  "Brian Ketelsen <Brian.Ketelsen@microsoft.com>",
  "Brian Hardock <Brian.Hardock@microsoft.com>",
  "Ryan Levick <rylevick@microsoft.com>",
  "Kevin Flansburg <kevin.flansburg@gmail.com>",
]
edition = "2021"
license = "Apache-2.0"
name = "wasi-provider"
publish = false
version = "1.0.0-alpha.1"

[features]
default = ["native-tls"]
native-tls = ["kube/native-tls", "kubelet/kube-native-tls", "krator/kube-native-tls"]
rustls-tls = ["kube/rustls-tls", "kubelet/rustls-tls", "krator/rustls-tls"]

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
backtrace = "0.3"
cap-std = "0.19"
chrono = {version = "0.4", features = ["serde"]}
futures = "0.3"
krator = {version = "0.5", default-features = false}
kube = {version = "0.60", default-features = false}
kubelet = {path = "../kubelet", version = "1.0.0-alpha.1", default-features = false, features = ["derive"]}
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tempfile = "3.1"
tokio = {version = "1.0", features = ["fs", "macros", "io-util", "sync"]}
tracing = {version = "0.1", features = ['log']}
wasi-cap-std-sync = "0.30"
wasi-common = "0.30"
wasmtime = "0.30"
wasmtime-wasi = "0.30"
wat = "1.0.38"
wasi-experimental-http-wasmtime = "0.6.0"

[dev-dependencies]
k8s-openapi = {version = "0.13", default-features = false, features = ["v1_22", "api"]}
oci-distribution = "0.8"
